codeamp/backend-k8s/base/circuit-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: circuit
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: circuit
    spec:
      containers:
        - image: gcr.io/deploy-test-231020/circuit:base
          name: circuit
          command: ["reflex", "-c", "reflex.conf"]
          ports:
            - name: circuit-port
              containerPort: 3011
        - image: gcr.io/deploy-test-231020/circuit:base
          name: circuit-dex
          command: ["/usr/local/bin/dex", "serve", "/circuit-config/dex.yml"]
          ports:
            - name: dex-port
              containerPort: 5556
          readinessProbe:
            httpGet:
              path: /dex/healthz
              port: dex-port
          volumeMounts:
            - name: config-volume
              mountPath: /circuit-config
      volumes:
        - name: config-volume
          configMap:
            name: circuit-configmap
