codeamp/backend-k8s/base/circuit-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: circuit
spec:
  type: NodePort
  selector:
    app: circuit
  ports:
    - name: circuit-port
      port: 3011
      targetPort: 3011
    - name: dex-port
      port: 5556
      targetPort: 5556
